possible fix for non covering gradient background

--- a/style.css
+++ b/style.css
@@ -10,9 +10,13 @@ body {
 
 body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     text-align: center;
     background: linear-gradient(to right, rgb(169, 116, 116), rgb(87, 87, 167));
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
 }
 
 h1 {
